src/main/antlr4/testParser.java
package main.antlr4;

// Generated from test.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class testParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		PALLET=60, ENDORSE=61, BAR=62, BARRULET=63, HAMADE=64, RIBBON=65, BATON=66, 
		BendletSinister=67, LOZENGE=68, BILLET=69, ROUNDEL=70, LABEL=71, FRET=72, 
		HorsesHead=73, TORTEAUX=74, ROSE=75, SPEAR=76, SHELL=77, QUARTER=78, CANTON=79, 
		FLAUNCH=80, GORE=81, GYRON=82, ORLE=83, ESCUTCHEON=84, FUSIL=85, MASCLE=86, 
		RUSTRE=87, ANNULET=88, FESS=89, PALE=90, BEND=91, BendSinister=92, SALTIRE=93, 
		CROSS=94, QUARTERLY=95, CHEVRON=96, PALL=97, CRESCENT=98, BORDURE=99, 
		PILE=100, LION=101, TYGER=102, BengalTiger=103, LEOPARD=104, FOX=105, 
		WOLF=106, BEAR=107, BADGER=108, OTTER=109, THYLACINE=110, PANTHER=111, 
		CAT=112, HOUND=113, WEASEL=114, ANTELOPE=115, COW=116, CAMEL=117, DEER=118, 
		ELEPHANT=119, HIPPOPOTAMUS=120, RHINOCEROS=121, SWINE=122, SHEEP=123, 
		MULLET=124, MARTLET=125, FleurDeLys=126, CrossMoline=127, DoubleQuatrefoil=128, 
		WS=129;
	public static final int
		RULE_blazon = 0, RULE_tincture = 1, RULE_tinctureNames = 2, RULE_complexField = 3, 
		RULE_fieldPosition = 4, RULE_ordinaryPosition = 5, RULE_escutcheonLocations = 6, 
		RULE_direction = 7, RULE_coatDivision = 8, RULE_seme = 9, RULE_ordinary = 10, 
		RULE_diminutiveNames = 11, RULE_charges = 12, RULE_subordinary = 13, RULE_ordinaryNames = 14, 
		RULE_number = 15, RULE_animal = 16, RULE_animalNames = 17, RULE_animalPosition = 18, 
		RULE_cadency = 19, RULE_cadencyNames = 20;
	public static final String[] ruleNames = {
		"blazon", "tincture", "tinctureNames", "complexField", "fieldPosition", 
		"ordinaryPosition", "escutcheonLocations", "direction", "coatDivision", 
		"seme", "ordinary", "diminutiveNames", "charges", "subordinary", "ordinaryNames", 
		"number", "animal", "animalNames", "animalPosition", "cadency", "cadencyNames"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'and'", "','", "'of the field'", "'Argent'", "'Or'", "'Gules'", 
		"'Sable'", "'Azure'", "'Vert'", "'Purpure'", "'Murrey'", "'Sanguine'", 
		"'Tenne'", "'over all'", "'on a '", "'in'", "'chief'", "'base'", "'dexter'", 
		"'sinister'", "'palewise'", "'fesswise'", "'party'", "'parted'", "'per'", 
		"'seme of'", "'s'", "'es'", "'semy-de-lis'", "'crusily'", "'bezante'", 
		"'plate'", "'billete'", "'annulletty'", "'etincelle'", "'gouttee'", "'tortelly'", 
		"'debruised by'", "'between'", "'a'", "'an'", "'as many'", "'one'", "'two'", 
		"'three'", "'four'", "'five'", "'rampant'", "'segreant'", "'passant'", 
		"'statant'", "'tripant'", "'guardant'", "'with'", "'for'", "'difference'", 
		"'distinction'", "'label of'", "'points'", "'pallet'", "'endorse'", "'bar'", 
		"'barrulet'", "'hamade'", "'ribbon'", "'baton'", "'bendlet sinister'", 
		"'lozenge'", "'billet'", "'roundel'", "'label'", "'fret'", "'horses' head'", 
		"'torteaux'", "'rose'", "'spear'", "'shell'", "'quarter'", "'canton'", 
		"'flaunch'", "'gore'", "'gyron'", "'orle'", "'escutcheon'", "'fusil'", 
		"'mascle'", "'rustre'", "'annulet'", "'fess'", "'pale'", "'bend'", null, 
		"'saltire'", "'cross'", null, "'chevron'", "'pall'", "'crescent'", "'bordure'", 
		"'pile'", "'lion'", "'tyger'", "'bengal tiger'", "'leopard'", "'fox'", 
		null, "'bear'", "'badger'", "'otter'", "'thylacine'", "'panther'", "'cat'", 
		"'hound'", "'weasel'", "'antelope'", "'cow'", "'camel'", "'deer'", "'elephant'", 
		"'hippopotamus'", "'rhinoceros'", "'swine'", "'sheep'", "'mullet'", "'martlet'", 
		null, null, "'double quatrefoil'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"PALLET", "ENDORSE", "BAR", "BARRULET", "HAMADE", "RIBBON", "BATON", "BendletSinister", 
		"LOZENGE", "BILLET", "ROUNDEL", "LABEL", "FRET", "HorsesHead", "TORTEAUX", 
		"ROSE", "SPEAR", "SHELL", "QUARTER", "CANTON", "FLAUNCH", "GORE", "GYRON", 
		"ORLE", "ESCUTCHEON", "FUSIL", "MASCLE", "RUSTRE", "ANNULET", "FESS", 
		"PALE", "BEND", "BendSinister", "SALTIRE", "CROSS", "QUARTERLY", "CHEVRON", 
		"PALL", "CRESCENT", "BORDURE", "PILE", "LION", "TYGER", "BengalTiger", 
		"LEOPARD", "FOX", "WOLF", "BEAR", "BADGER", "OTTER", "THYLACINE", "PANTHER", 
		"CAT", "HOUND", "WEASEL", "ANTELOPE", "COW", "CAMEL", "DEER", "ELEPHANT", 
		"HIPPOPOTAMUS", "RHINOCEROS", "SWINE", "SHEEP", "MULLET", "MARTLET", "FleurDeLys", 
		"CrossMoline", "DoubleQuatrefoil", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "test.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public testParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BlazonContext extends ParserRuleContext {
		public TinctureContext tincture() {
			return getRuleContext(TinctureContext.class,0);
		}
		public SemeContext seme() {
			return getRuleContext(SemeContext.class,0);
		}
		public ComplexFieldContext complexField() {
			return getRuleContext(ComplexFieldContext.class,0);
		}
		public BlazonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blazon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterBlazon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitBlazon(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitBlazon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlazonContext blazon() throws RecognitionException {
		BlazonContext _localctx = new BlazonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_blazon);
		try {
			setState(45);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				tincture();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				seme();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				complexField();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TinctureContext extends ParserRuleContext {
		public List<TinctureNamesContext> tinctureNames() {
			return getRuleContexts(TinctureNamesContext.class);
		}
		public TinctureNamesContext tinctureNames(int i) {
			return getRuleContext(TinctureNamesContext.class,i);
		}
		public TinctureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tincture; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterTincture(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitTincture(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitTincture(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TinctureContext tincture() throws RecognitionException {
		TinctureContext _localctx = new TinctureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tincture);
		int _la;
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(47);
				tinctureNames();
				setState(50);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(48);
					match(T__0);
					setState(49);
					tinctureNames();
					}
					break;
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(52);
					match(T__1);
					}
				}

				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TinctureNamesContext extends ParserRuleContext {
		public TinctureNamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tinctureNames; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterTinctureNames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitTinctureNames(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitTinctureNames(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TinctureNamesContext tinctureNames() throws RecognitionException {
		TinctureNamesContext _localctx = new TinctureNamesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tinctureNames);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexFieldContext extends ParserRuleContext {
		public TinctureContext tincture() {
			return getRuleContext(TinctureContext.class,0);
		}
		public CoatDivisionContext coatDivision() {
			return getRuleContext(CoatDivisionContext.class,0);
		}
		public SemeContext seme() {
			return getRuleContext(SemeContext.class,0);
		}
		public List<FieldPositionContext> fieldPosition() {
			return getRuleContexts(FieldPositionContext.class);
		}
		public FieldPositionContext fieldPosition(int i) {
			return getRuleContext(FieldPositionContext.class,i);
		}
		public List<OrdinaryContext> ordinary() {
			return getRuleContexts(OrdinaryContext.class);
		}
		public OrdinaryContext ordinary(int i) {
			return getRuleContext(OrdinaryContext.class,i);
		}
		public CadencyContext cadency() {
			return getRuleContext(CadencyContext.class,0);
		}
		public ComplexFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterComplexField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitComplexField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitComplexField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComplexFieldContext complexField() throws RecognitionException {
		ComplexFieldContext _localctx = new ComplexFieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_complexField);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__22) | (1L << T__23) | (1L << T__24))) != 0)) {
				{
				setState(60);
				coatDivision();
				}
			}

			setState(63);
			tincture();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__25) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36))) != 0)) {
				{
				setState(64);
				seme();
				}
			}

			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(67);
				fieldPosition();
				}
				break;
			}
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(70);
				match(T__0);
				}
				break;
			}
			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(73);
					ordinary();
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__13 || _la==T__14) {
				{
				setState(79);
				fieldPosition();
				}
			}

			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__39 || _la==T__53) {
				{
				setState(82);
				cadency();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldPositionContext extends ParserRuleContext {
		public OrdinaryContext ordinary() {
			return getRuleContext(OrdinaryContext.class,0);
		}
		public OrdinaryNamesContext ordinaryNames() {
			return getRuleContext(OrdinaryNamesContext.class,0);
		}
		public TinctureContext tincture() {
			return getRuleContext(TinctureContext.class,0);
		}
		public ChargesContext charges() {
			return getRuleContext(ChargesContext.class,0);
		}
		public FieldPositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldPosition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterFieldPosition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitFieldPosition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFieldPosition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldPositionContext fieldPosition() throws RecognitionException {
		FieldPositionContext _localctx = new FieldPositionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldPosition);
		int _la;
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(T__13);
				setState(86);
				ordinary();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(87);
				match(T__14);
				setState(88);
				ordinaryNames();
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) {
					{
					setState(89);
					tincture();
					}
				}

				setState(93);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(92);
					charges();
					}
					break;
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrdinaryPositionContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public OrdinaryPositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ordinaryPosition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterOrdinaryPosition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitOrdinaryPosition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitOrdinaryPosition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrdinaryPositionContext ordinaryPosition() throws RecognitionException {
		OrdinaryPositionContext _localctx = new OrdinaryPositionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ordinaryPosition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(97);
				match(T__0);
				setState(98);
				number();
				}
			}

			setState(101);
			match(T__15);
			setState(102);
			_la = _input.LA(1);
			if ( !(_la==T__16 || _la==T__17 || ((((_la - 89)) & ~0x3f) == 0 && ((1L << (_la - 89)) & ((1L << (FESS - 89)) | (1L << (PALE - 89)) | (1L << (BEND - 89)) | (1L << (CHEVRON - 89)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscutcheonLocationsContext extends ParserRuleContext {
		public EscutcheonLocationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escutcheonLocations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterEscutcheonLocations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitEscutcheonLocations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitEscutcheonLocations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscutcheonLocationsContext escutcheonLocations() throws RecognitionException {
		EscutcheonLocationsContext _localctx = new EscutcheonLocationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_escutcheonLocations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==T__18 || _la==T__19) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectionContext extends ParserRuleContext {
		public DirectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_direction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDirection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDirection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitDirection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectionContext direction() throws RecognitionException {
		DirectionContext _localctx = new DirectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_direction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !(_la==T__20 || _la==T__21) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoatDivisionContext extends ParserRuleContext {
		public OrdinaryNamesContext ordinaryNames() {
			return getRuleContext(OrdinaryNamesContext.class,0);
		}
		public CoatDivisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coatDivision; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterCoatDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitCoatDivision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitCoatDivision(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoatDivisionContext coatDivision() throws RecognitionException {
		CoatDivisionContext _localctx = new CoatDivisionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_coatDivision);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22 || _la==T__23) {
				{
				setState(108);
				_la = _input.LA(1);
				if ( !(_la==T__22 || _la==T__23) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(111);
			match(T__24);
			setState(112);
			ordinaryNames();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
